update bug on dark mode and the project desc

--- a/src/components/body/projects/project-card.css
+++ b/src/components/body/projects/project-card.css
@@ -14,6 +14,7 @@
 }
 .project-info {
   margin-right: 24px;
+  max-width: 70%;
 }
 
 .project-title {
@@ -25,6 +26,10 @@
   display: flex;
   max-width: 60%;
   flex-wrap: wrap;
+}
+
+.projectabout {
+  max-width: 70%;
 }
 .tag {
   padding: 4px 8px;
@@ -62,11 +67,9 @@
   margin-right: 4px;
 }
 
-
-
 @media only screen and (max-width: 720px) {
   .project-photo {
-    width: 70%;
+    width: 90%;
   }
   .project-card {
     flex-direction: column-reverse;
@@ -74,8 +77,12 @@
   .project-info {
     margin-left: 0px;
     margin-top: 12px;
+    max-width: 100%;
   }
   .project-tags {
+    max-width: 100%;
+  }
+  .projectabout {
     max-width: 100%;
   }
 }
